2025-02-07T00:36:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13190662599 # 558
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-07
* notice: last 14d: unq all: 20 33
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1196 / 750 1228
* notice: next accum: outdated-unq outdated-all / unq all: 725 1196 / 751 1229
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-06]

2025-02-06T00:36:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13169311116 # 557
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-06
* notice: last 14d: unq all: 20 32
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1196 / 748 1226
* notice: next accum: outdated-unq outdated-all / unq all: 725 1196 / 750 1228
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-02-05]

2025-02-05T00:36:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13147638916 # 556
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-05
* notice: last 14d: unq all: 19 30
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1196 / 747 1225
* notice: next accum: outdated-unq outdated-all / unq all: 725 1196 / 748 1226
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-04]

2025-02-04T00:35:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13125766194 # 555