@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-07T00:36:06Z",
+  "timestamp" : "2025-02-08T00:34:59Z",
   "count_outdated" : 1196,
   "uniques_outdated" : 725,
-  "count" : 1229,
-  "uniques" : 751,
+  "count" : 1230,
+  "uniques" : 752,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2025-02-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
