@@ -1,6 +1,6 @@
 {
-  "count": 33,
-  "uniques": 20,
+  "count": 34,
+  "uniques": 21,
   "clones": [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2025-02-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
